S13nServiceWorker: do not destroy SW's main resource loader too early

After the main resource loader is bound to a loader request
the loader shouldn't be deleted when the request handler is
deleted. (The loader should be able to outlive as far as the
loader's Mojo pipe is held by its client)

Bug: 790933
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_mojo
Change-Id: I81dab1599d1b0af3aa03f2acfed5f8edc4dd53dd